# REST api/swagger/spring-server/src/main/java/ch/heig/gamification/api/endpoints/EventsApiController.java
@@ -2,6 +2,7 @@ package ch.heig.gamification.api.endpoints;
 
 import ch.heig.gamification.entities.*;
 import ch.heig.gamification.repositories.ApplicationRepository;
+import ch.heig.gamification.repositories.UserGenericEventCountRepository;
 import ch.heig.gamification.repositories.UserRepository;
 import io.avalia.gamification.api.EventsApi;
 import io.avalia.gamification.api.model.Event;
@@ -9,6 +10,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
+import javax.script.ScriptEngine;
+import javax.script.ScriptEngineManager;
+import javax.script.ScriptException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -22,6 +26,9 @@ public class EventsApiController implements EventsApi {
 
     @Autowired
     UserRepository userRepository;
+
+    @Autowired
+    UserGenericEventCountRepository userGenericEventCountEntity;
 
     private EventEntity toEventEntity(Event Event) {
         EventEntity entity = new EventEntity();
@@ -90,24 +97,103 @@ public class EventsApiController implements EventsApi {
             for(PointScaleEntity p : app.getPointScales()){
                 userConcerned.addPointScale(p);
             }
+            app.addUser(userConcerned);
         }
         StringBuilder elementAwarded = new StringBuilder();
         //for each rule
         for(RuleEntity r : matchingRules){
+            //adding the event to the event count of the user
+            addToEventCount(r.getEventName(), userConcerned);
             //check if the properties are valid, if yes, we give the award to the user
-            if(propertyOk(r.getProperties(), eventEntity.getProperties())){
-                elementAwarded.append(addAwardsToUser(r.getAwards(), userConcerned));
+            try {
+                if(propertyOk(r.getProperties(), eventEntity.getProperties(), userConcerned)){
+                    elementAwarded.append(addAwardsToUser(r.getAwards(), userConcerned));
+                }
+                applicationRepository.save(app);
+            } catch (ScriptException e) {
+                e.printStackTrace();
             }
         }
 
         return ResponseEntity.ok(elementAwarded.toString());
     }
 
-    private boolean propertyOk(List<RulePropertiesEntity> rulePropertiesEntities, List<EventPropertiesEntity> eventPropertiesEntities){
-        return false;
+    private boolean propertyOk(List<RulePropertiesEntity> rulePropertiesEntities, List<EventPropertiesEntity> eventPropertiesEntities, UserEntity userConcerned) throws ScriptException {
+        //for each property in the rule, we find the corresponding property in the event
+        for(RulePropertiesEntity rulePropertiesEntity : rulePropertiesEntities){
+            boolean validated = false;
+            for(EventPropertiesEntity eventPropertiesEntity : eventPropertiesEntities){
+                if(rulePropertiesEntity.getPropertyName().equals(eventPropertiesEntity.getName())){
+                    ScriptEngineManager mgr = new ScriptEngineManager();
+                    ScriptEngine engine = mgr.getEngineByName("JavaScript");
+                    if(rulePropertiesEntity.getType().equals("amount")){
+                        LinkTableId eventId = new LinkTableId(userConcerned.getId().getApiToken(), userConcerned.getId().getName(), eventPropertiesEntity.getName());
+                        UserGenericEventCountEntity eventCount = userGenericEventCountEntity.findById(eventId);
+                        int value = eventCount.getValue();
+                        String expression = String.valueOf(value) + rulePropertiesEntity.getCompareOperator() + rulePropertiesEntity.getValue();
+                        if(!((boolean)engine.eval(expression))){
+                            return false;
+                        }
+                        else{
+                            validated = true;
+                            break;
+                        }
+                    }
+                    else if(rulePropertiesEntity.getType().equals("value")){
+                        String expression = eventPropertiesEntity.getValue() + rulePropertiesEntity.getCompareOperator() + rulePropertiesEntity.getValue();
+                        if(!((boolean)engine.eval(expression))){
+                            return false;
+                        }
+                        else{
+                            validated = true;
+                            break;
+                        }
+                    }
+                    //this should never happen as we are suppose to control at the creation of a rule that the type is either value or amount
+                    else{
+                        throw new RuntimeException("This rule can't exist");
+                    }
+                }
+            }
+            if(!validated){
+                return false;
+            }
+        }
+        return true;
     }
 
     private String addAwardsToUser(RuleAwardsEntity ruleAwardsEntity, UserEntity userEntity){
+        //adding each badges
+        for(RuleAwardsBadgesEntity b : ruleAwardsEntity.getRuleAwardsBadgesId()){
+            BadgeEntity newBadge = new BadgeEntity(b.getRuleBadgesId().getApiToken(), b.getRuleBadgesId().gettable2Id());
+            if(!userEntity.getBadges().contains(newBadge)){
+                userEntity.addBadge(newBadge);
+            }
+        }
+        //update all pointScales
+        List<RuleAwardsPointScaleEntity> pointScaleEntities = ruleAwardsEntity.getruleAwardsPointScaleId();
+        for(int i = 0; i < pointScaleEntities.size(); i++){
+            for(int j = 0; j < userEntity.getUserPointScaleEntities().size(); j++){
+                if(pointScaleEntities.get(i).getRulePointScaleId().gettable2Id().equals(userEntity.getUserPointScaleEntities().get(j).getUserPointScaleId().gettable2Id())){
+                    int previousValue = userEntity.getUserPointScaleEntities().get(j).getValue();
+                    userEntity.getUserPointScaleEntities().get(j).setValue(previousValue + ruleAwardsEntity.getAmountofPoint().get(i));
+                    break;
+                }
+            }
+        }
         return null;
+    }
+
+    private void addToEventCount(String eventName, UserEntity userEntity){
+        for(UserGenericEventCountEntity event : userEntity.getUserGenericEventCountEntities()){
+            if(event.getId().gettable2Id().equals(eventName)){
+                event.incValue();
+                return;
+            }
+        }
+        UserGenericEventCountEntity newEvent = new UserGenericEventCountEntity();
+        newEvent.setid(new LinkTableId(userEntity.getId().getApiToken(), userEntity.getId().getName(), eventName));
+        newEvent.setValue(1);
+        userEntity.addEventCount(newEvent);
     }
 }
