# REST api/swagger/spring-server/src/main/java/ch/heig/gamification/repositories/UserGenericEventCountRepository.java
@@ -1,0 +1,12 @@
+package ch.heig.gamification.repositories;
+
+import ch.heig.gamification.entities.LinkTableId;
+import ch.heig.gamification.entities.UserGenericEventCountEntity;
+import ch.heig.gamification.entities.UserPointScaleEntity;
+import org.springframework.data.repository.CrudRepository;
+
+public interface UserGenericEventCountRepository extends CrudRepository<UserGenericEventCountEntity, LinkTableId>{
+
+    public UserGenericEventCountEntity findById(LinkTableId id);
+
+}
